Fix info icon on mobile

--- a/front/src/ui/assets/styles/base/texts.css
+++ b/front/src/ui/assets/styles/base/texts.css
@@ -1,6 +1,8 @@
 .info {
   position: relative;
   width: 100%;
+	pointer-events: auto;
+	z-index: 2;
 }
 
 .title,
